--- a/coursework_1/app/templates/base.html
+++ b/coursework_1/app/templates/base.html
@@ -12,9 +12,9 @@
   <body>
     <nav>
       <ul>
-        <li>Link 1</li>
-        <li>Link 2</li>
-        <li>Line 3</li>
+        <li><a href="/">Display To-Do List</a></li>
+        <li><a href="/completed">Display Completed Tasks</a></li>
+        <li><a href="/add_task">Create a New Task</a></li>
       </ul>
     </nav>
 
