--- a/coursework_1/app/templates/create_task.html
+++ b/coursework_1/app/templates/create_task.html
@@ -1,4 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-  <p>Hello World!!! Task creation goes here.</p>
+  <h1>Create New Task</h1>
+  <form action="" method="post" name="task">
+    {{ form.hidden_tag() }}
+    <p>
+      {{ form.title }}<br>
+    </p>
+    <p>
+      {{ form.desc }}<br>
+    </p>
+    <p><input type="submit" value="Task"></p>
+  </form>  
 {% endblock %}
