Updated db model to include date column.

--- a/coursework_1/app/templates/view_tasks.html
+++ b/coursework_1/app/templates/view_tasks.html
@@ -5,6 +5,7 @@
     <div id="tasks">
       <p id="title">Title: {{ task.title }}</p>
       <p id="desc">Description: {{ task.description }}</p><br>
+      <p id="date">Date Added: {{ task.date }}</p><br>
     </div>
   {% endfor %}
 {% endblock %}
