--- a/coursework_1/app/static/style.css
+++ b/coursework_1/app/static/style.css
@@ -30,6 +30,9 @@ div{
   margin-left: 250px;
   height: 100%;
 }
+h1{
+  margin-left: 250px;
+}
 #tasks{
   border-style: solid;
   margin-top: 25px;
