--- a/coursework_1/app/templates/view_tasks.html
+++ b/coursework_1/app/templates/view_tasks.html
@@ -2,10 +2,13 @@
 {% block content %}
   <h1>Tasks</h1>
   {% for task in tasks %}
-    <div id="tasks">
-      <p id="title">Title: {{ task.title }}</p>
-      <p id="desc">Description: {{ task.description }}</p><br>
-      <p id="date">Date Added: {{ task.date }}</p><br>
-    </div>
+    {% if not task.completed %}
+      <div id="tasks">
+        <p id="title">Title: {{ task.title }}</p>
+        <p id="complete"><input type="checkbox" value="Complete"></p>
+        <p id="desc">Description: {{ task.description }}</p>
+        <p id="date">Date Added: {{ task.date }}</p><br>
+      </div>
+    {% endif %}
   {% endfor %}
 {% endblock %}
