Added dateCompleted field to db.

--- a/coursework_1/app/templates/create_task.html
+++ b/coursework_1/app/templates/create_task.html
@@ -12,7 +12,7 @@
         Task Description: (Optional. Max 500 characters.)<br>
         {{ form.desc }}<br>
       </p>
-      <p><input type="submit" value="Task"></p>
+      <p><input type="submit" value="Create Task"></p>
     </form>
     {% with messages=get_flashed_messages() %}
       {% if messages %}
