--- a/coursework_1/app/templates/view_completed.html
+++ b/coursework_1/app/templates/view_completed.html
@@ -6,7 +6,8 @@
       <div id="tasks">
         <p id="title">Title: {{ task.title }}</p>
         <p id="desc">Description: {{ task.description }}</p>
-        <p id="date">Date Added: {{ task.date }}</p><br>
+        <p id="date">Date Added: {{ task.date }}</p>
+        <p id="date">Date Completed: {{ task.dateCompleted }}</p><br>
       </div>
     {% endif %}
   {% endfor %}
