Started implementing full login functionality.

--- a/coursework_2/app/templates/login.html
+++ b/coursework_2/app/templates/login.html
@@ -12,5 +12,15 @@
     </p>
     <p><input type="submit" value="Login"></p>
     <p>Don't have an account? Click <a href="">here</a> to make one.</p>
+
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <ul>
+          {% for message in messages %}
+            <li>{{ message }}</li>
+          {% endfor %}
+        </ul>
+      {% endif %}
+    {% endwith %}
   </div>
 {% endblock %}
