--- a/coursework_2/app/templates/login.html
+++ b/coursework_2/app/templates/login.html
@@ -11,7 +11,7 @@
       Password: {{ form.password }}
     </p>
     <p><input type="submit" value="Login"></p>
-    <p>Don't have an account? Click <a href="">here</a> to make one.</p>
+    <p>Don't have an account? Click <a href="/register">here</a> to make one.</p>
 
     {% with messages = get_flashed_messages() %}
       {% if messages %}
