--- a/coursework_2/app/templates/base.html
+++ b/coursework_2/app/templates/base.html
@@ -14,7 +14,34 @@
 </head>
 
 <body>
-  {% block content %}{% endblock %}
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+     <a class="navbar-brand" href="/home">Comp2011</a>
+     <ul class="navbar-nav mr-auto">
+       <li class="nav-item">
+         <a class="nav-link" href="">Temp 1</a>
+       </li>
+       <li class="nav-item">
+         <a class="nav-link" href="">Temp 2</a>
+       </li>
+       <li class="nav-item">
+         <a class="nav-link" href="">Temp 3</a>
+       </li>
+     </ul>
+
+     <ul class="navbar-nav">
+       <li class="nav-item">
+         <a class="nav-link" href="/account">Account</a>
+       </li>
+       <li class="nav-item">
+         <a class="nav-link" href="/logout">Logout</a>
+       </li>
+     </ul>
+   </nav>
+
+  <div class="container">
+    {% block content %}{% endblock %}
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
