--- a/coursework_2/app/templates/login.html
+++ b/coursework_2/app/templates/login.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
+  <style>
+    .navbar{
+      display: none;
+    }
+  </style>
+
   <h1>Login</h1>
   <form action="" method="post" name="login">
     {{ form.hidden_tag() }}
@@ -22,5 +27,4 @@
         </ul>
       {% endif %}
     {% endwith %}
-  </div>
 {% endblock %}
