--- a/coursework_2/app/templates/base.html
+++ b/coursework_2/app/templates/base.html
@@ -16,7 +16,7 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-     <a class="navbar-brand" href="/home">Comp2011</a>
+     <a class="navbar-brand" href="/">Comp2011</a>
      <ul class="navbar-nav mr-auto">
        <li class="nav-item">
          <a class="nav-link" href="">Temp 1</a>
@@ -34,7 +34,11 @@
          <a class="nav-link" href="/account">Account</a>
        </li>
        <li class="nav-item">
+         {% if user.authenticated %}
          <a class="nav-link" href="/logout">Logout</a>
+         {% else %}
+         <a class="nav-link" href="/login">Login</a>
+         {% endif %}
        </li>
      </ul>
    </nav>
