Updated Books model and added view books page.

--- a/coursework_2/app/templates/base.html
+++ b/coursework_2/app/templates/base.html
@@ -19,7 +19,7 @@
      <a class="navbar-brand" href="/">Comp2011</a>
      <ul class="navbar-nav mr-auto">
        <li class="nav-item">
-         <a class="nav-link" href="">Temp 1</a>
+         <a class="nav-link" href="/list_books">List Books</a>
        </li>
        <li class="nav-item">
          <a class="nav-link" href="">Temp 2</a>
