--- a/coursework_2/app/templates/base.html
+++ b/coursework_2/app/templates/base.html
@@ -22,7 +22,7 @@
          <a class="nav-link" href="/list_books">List Books</a>
        </li>
        <li class="nav-item">
-         <a class="nav-link" href="">Temp 2</a>
+         <a class="nav-link" href="/collection">View Book Collection</a>
        </li>
        <li class="nav-item">
          <a class="nav-link" href="">Temp 3</a>
