--- a/coursework_2/app/templates/details.html
+++ b/coursework_2/app/templates/details.html
@@ -7,7 +7,8 @@
     </div>
     <div class="col-md-6">
       <p>Author: {{ book.author }}</p>
-      <p>Release Date: {{ book.release_date }}</p><br>
+      <p>Release Date: {{ book.release_date }}</p>
+      <p>Description: {{ book.description }}</p><br>
 
       <form id="add" action="" method="post" name="Add">
         <input id="{{ book.id }}" type="button" value="Add Book to Collection">
