Added confirmation message when adding books.

--- a/coursework_2/app/templates/details.html
+++ b/coursework_2/app/templates/details.html
@@ -13,6 +13,8 @@
       <form id="add" action="" method="post" name="Add">
         <input id="{{ book.id }}" type="button" value="Add Book to Collection">
       </form>
+
+      <p id="success"></p>
     </div>
   </div>
 {% endblock %}
