--- a/coursework_2/app/templates/details.html
+++ b/coursework_2/app/templates/details.html
@@ -3,7 +3,7 @@
   <h1>{{ book.title }}</h1>
   <div class="container-fluid row">
     <div class="col">
-      <img style="float:left;" src="{{ book.image }}" alt="Cover image for {{ book.title }}">
+      <img style="float:left;" src="{{ book.image }}" alt="Cover image for {{ book.title }}" height="400" width="300">
     </div>
     <div class="col-md-6">
       <p>Author: {{ book.author }}</p>
